test/analyze/type_check/anonymous_function/return.myte
module test

fun validReturn(): Unit {
  fn (): Int {
    if (true) {
      return 1;
    } else {
      if (true) {
        return 2;
      }
    }

    {
      return 3;
    }
  };
}

fun invalidReturn(): Unit {
  fn (): Int {
    if (true) {
      return "";
    } else {
      if (true) {
        return true;
      }
    }

    {
      return explicitUnitReturn;
    }
  };
}

fun explicitUnitReturn(): Int {
  // Success
  fn (): Unit {};
  fn (): Unit { return; };
  fn (): Unit { return (); };
  fn (): Unit -> ();

  // Failure
  fn (): Unit { return 1; };
  fn (): Unit -> 1;

  return 1;
}

fun implicitUnitReturn(): Int {
  // Success
  fn () {};
  fn () { return; };
  fn () { return (); };
  fn () -> ();

  // Failure
  fn () { return 1; };
  fn () -> 1;

  return 1;
}

fun nestedAnonymousFunctionReturn(): String {
  fn (): Int {
    fn (): Unit {
      if (true) {
        return ();
      } else {
        return 1;
      }
    };

    if (true) {
      return ();
    } else {
      return 1;
    }
  };

  return "";
}

fun main() {}